test/end-to-end/runnable/variant-member-template.crow
main void()
	info log 7::nat.x.foo
	info log "hello"::string.x.foo
	()

v variant mut
x[t] record(value t) v variant-member

foo string(a v)
	match a
	as x x nat x
		"{x value}"
	as x x string x
		"{x value}"
	else
		"other"
